2004-01-20  Saito <saito2@digitalme.com>

	* timidity/playmidi.c:
	  Fix around NRPN vibrato.

2004-01-18  mput <root@mput.dip.jp>

	* timidity/playmidi.c (calc_random_delay): tiny bug fix

2004-01-18  Saito <saito2@digitalme.com>

	* timidity/readmidi.c:
	  Fix aborting.

2004-01-17  Saito <saito2@digitalme.com>

	* timidity/playmidi.c:
	  Fix sostenuto and redamper.

2004-01-16  Saito <saito2@digitalme.com>

	* timidity/playmidi.c:
	  Fix SysEx.
	* timidity/reverb.[ch], timidity/effect.c, timidity/mt19937ar.h,
	  timidity/playmidi.[ch], timidity/instrum.h, timidity/timidity.c:
	  Implement pink noise generator.
	  Support for #extension rnddelay [ms].

2004-01-15  Kentaro Sato <kentaro@ranvis.com>

	* timidity/common.[ch], sndfont.c, timidity.c:
	  Changed #extension ...send, playnote option's argument format.

2004-01-15  Saito <saito2@digitalme.com>

	* timidity/timidity.c, timidity/playmidi.[ch], timidity/instrum.h,
	  timidity/mix.c, timidity/readmidi.c:
	  Support for redamper effect (#extension redamper).
	  Support for Sostenuto and Hold1 Half Pedal.

2004-01-15  Kentaro Sato <kentaro@ranvis.com>

	* timidity/playmidi.c: Casting error fixed.
	* timidity/sndfont.c: Added playnote calculation for cfgforsf (incomplete).

2004-01-15  Daisuke Aoki <dai@sweetparty.ne.jp>

	* timidity/sndfont.c: cfgforsf supported comment option.

2004-01-14  mput <root@mput.dip.jp>

	* timidity/playmidi.c (play_event): Fix for buffer overflow
	* timidity/readmidi.c (drum_setup_xg): ditto

2004-01-13  Christian Casteyde <casteyde.christian@free.fr>

	* timidity/aRts_a.c (open_output): Fix for aRts backend hogging
	  100% CPU

2004-01-13  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/playmidi.c:
	  Rewrite and fix around select_play_sample()

2004-01-11  Saito <saito2@digitalme.com>

	* timidity/timidity.c, timidity/playmidi.c, timidity/instrum.h:
	  Support for #extension reverbsend, chorussend, delaysend.
	  Fix SF2 scale tuning.

2004-01-10  Saito <saito2@digitalme.com>
