@@ -213,9 +213,11 @@ static void ctl_event(CtlEvent *e)
       case CTLE_CURRENT_TIME:
 	ctl_current_time((int)e->v1);
 	break;
+      #ifndef CFG_FOR_SF
       case CTLE_LYRIC:
 	ctl_lyric((int)e->v1);
 	break;
+      #endif
     }
 }
 
